Closed Bug 1502977 Opened 7 years ago Closed 7 years ago

Startup crashes with fbplugin on macos

Categories

(External Software Affecting Firefox :: Other, defect)

Unspecified
macOS
defect
Not set
critical

Tracking

(firefox-esr60 unaffected, firefox63 wontfix, firefox64+ fixed, firefox65+ fixed)

RESOLVED FIXED
Tracking Status
firefox-esr60 --- unaffected
firefox63 --- wontfix
firefox64 + fixed
firefox65 + fixed

People

(Reporter: philipp, Assigned: gsvelto)

References

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is report bp-2ecb6ae5-30bb-4bff-b0b3-5118f0181028. ============================================================= Top 10 frames of crashing thread: 0 CoreFoundation CFBasicHashFindBucket 1 fbplugin fbplugin@0xeb8 2 fbplugin fbplugin@0x22e9 3 @0x118f9fa09 4 @0x118f9fc39 5 @0x118f9b16f 6 @0x118f9a2a5 7 @0x118f9a339 8 @0x118f8e3e4 9 @0x118f97001 ============================================================= after the update to firefox 63, there's an uptick in startup crashes on various versions of macos with the involvement of "fbplugin", that was already causing problems on other occasions (bug 1086977). this is currently accounting for close to 10% of browser crashes from macos, though it's hitting individual installations repeatedly.
the issue is also coming up on sumo a couple of times: https://support.mozilla.org/questions/firefox?owner=all&tagged=bug1502977&show=all
Crash Signature: [@ CFDictionaryGetValue] [@ CoreFoundation@0xb634] [@ CFBasicHashFindBucket] [@ CoreFoundation@0xc646] [@ CoreFoundation@0x9596] [@ CoreFoundation@0x863d] [@ CoreFoundation@0xc5f6] [@ CoreFoundation@0xc696] [@ CoreFoundation@0x9606] → [@ CFDictionaryGetValue] [@ CoreFoundation@0xb634] [@ CFBasicHashFindBucket] [@ CoreFoundation@0xc646] [@ CoreFoundation@0x9596] [@ CoreFoundation@0x863d] [@ CoreFoundation@0xc5f6] [@ CoreFoundation@0xc696] [@ CoreFoundation@0x9606] [@ CoreFounda…
Added a few more signature. I counted a total of about 350 crashes so far, but as philipp notes in Comment 0 some individuals are crashing more than once.
Crash Signature: CoreFoundation@0x84f8] → CoreFoundation@0x84f8] [@ CoreFoundation@0x842d]
Crash Signature: CoreFoundation@0x84f8] [@ CoreFoundation@0x842d] → CoreFoundation@0x84f8] [@ CoreFoundation@0x842d] [@ CoreFoundation@0x8248] [@ CoreFoundation@0xb8c4]
Crash Signature: CoreFoundation@0x84f8] [@ CoreFoundation@0x842d] [@ CoreFoundation@0x8248] [@ CoreFoundation@0xb8c4] → CoreFoundation@0x84f8] [@ CoreFoundation@0x842d] [@ CoreFoundation@0x8248] [@ CoreFoundation@0xb8c4] [@ CoreFoundation@0x9216]
Adding a 10.14 specific signature.
Crash Signature: CoreFoundation@0x84f8] [@ CoreFoundation@0x842d] [@ CoreFoundation@0x8248] [@ CoreFoundation@0xb8c4] [@ CoreFoundation@0x9216] → CoreFoundation@0x84f8] [@ CoreFoundation@0x842d] [@ CoreFoundation@0x8248] [@ CoreFoundation@0xb8c4] [@ CoreFoundation@0x9216] [@ __CFBasicHashRehash]
It looks like the plugin block that was introduced in bug 1086977 has been removed (inadvertently?) by bug 1348273.
Flags: needinfo?(gsvelto)
Oh gosh, I wanted to update that annotation and change the second part in a proper removal but I must have forgotten about it. Patch coming to put it back.
Flags: needinfo?(gsvelto)
Assignee: nobody → gsvelto
Status: NEW → ASSIGNED
hi jim, is it possible to review this patch soon? it would be very nice to see this uplifted to 64 still (because for a mac issue, it's getting mentioned fairly frequently on SUMO) - but the window where that's possible is closing soon.
Flags: needinfo?(jmathies)
Flags: needinfo?(jmathies)
Pushed by gsvelto@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/646caf2d4577 Reinstate the code blocking the "Facebook Photo Uploader" plugin on Mac and update the associated annotation r=jmathies
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Want to request uplift?
Flags: needinfo?(gsvelto)
Yes, right away
Flags: needinfo?(gsvelto)
Comment on attachment 9026230 [details] Bug 1502977 - Reinstate the code blocking the "Facebook Photo Uploader" plugin on Mac and update the associated annotation [Beta/Release Uplift Approval Request] Feature/Bug causing the regression: Bug 1348273 User impact if declined: Firefox crashes on startup Is this code covered by automated tests?: No Has the fix been verified in Nightly?: Yes Needs manual test from QE?: No If yes, steps to reproduce: List of other uplifts needed: None Risk to taking this patch: Low Why is the change risky/not risky? (and alternatives if risky): The patch only adds back code that was already preventing this problem from happening String changes made/needed: None
Attachment #9026230 - Flags: approval-mozilla-beta?
Comment on attachment 9026230 [details] Bug 1502977 - Reinstate the code blocking the "Facebook Photo Uploader" plugin on Mac and update the associated annotation block crashing plugin, approved for 64.0rc1
Attachment #9026230 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: