Bug 1502977 - Reinstate the code blocking the "Facebook Photo Uploader" plugin on Mac and update the associated annotation. r=jmathies, a=jcristau

Differential Revision: https://phabricator.services.mozilla.com/D12354